src/objects/Balance_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Balance Entries</relationshipLabel>
        <relationshipName>Balance_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Balance Entry</label>
    <nameField>
        <displayFormat>BE-{000000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Balance Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_be_future_date</fullName>
        <active>true</active>
        <errorConditionFormula>Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Cannot create a balance entry for the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Editable_by_Senior_Branch_Manager</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

NOT(ISNEW()), 
$UserRole.Name &lt;&gt; &quot;Senior Branch Manager&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;

)</errorConditionFormula>
        <errorMessage>You are not permitted to update this record.  Please contact the Senior Branch Manager to update this entry</errorMessage>
    </validationRules>
</CustomObject>